# tidal_flat

./: .Rhistory  .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  config.yaml  flat_stats  names.csv  new.csv  out.csv  output.csv  pyproject.toml  requirements.txt  run.py  run1.py  setup.cfg  setup.py  test  test.py  tide_model.REMOVED.git-id  timestep_test.xlsx
Rscripts/: make_tides.R  mongla_tides.R  mongla_tides_model.R  sutarkhali_tides.R
docs/: Makefile  UML_Diagram.drawio  Untitled Diagram.drawio  conf.py  index.rst  make.bat
example/: example.ipynb  tides.csv
figures/: 2-platform  3-tides
figures/4-delta/debug/: imglist.tex
notebooks/: 00-csdms-testing.ipynb  00-testing.ipynb  01-delta-runs.ipynb  01-model-testing.ipynb  01-repo-config.ipynb  01-sediment-model.ipynb  01-van-maren-amp.ipynb  02-delta-results.ipynb  02-model-runs-1960-2070.ipynb  02-tides-beta-slr.ipynb  03-delta-figures.ipynb  03-make-scenarios.ipynb  03-model-parallel.ipynb  04-model-parsing.ipynb  04-van-maren-statsmodel.ipynb  05-log-parsing.ipynb  05-model-runs.ipynb  05-solve_ivp-testing.ipynb  06-compile-results.ipynb  06-delta-prep.ipynb  06-delta-runs.ipynb  06-sediment-model-OOP-rework.ipynb  07-analyze-results.ipynb  07-delta-results.ipynb  07-delta-runs.ipynb  07-sediment-model-tidal-amplification.ipynb  08-delta-debug.ipynb  08-integration-method-testing.ipynb  09-model-testing.ipynb  09-ssc.ipynb  09.1-mongla-tides-amplification-model.ipynb  09.2-mongla-tides-amplification-model.ipynb  09.3-mongla-tides-amplification-model.ipynb  09.4-mongla-tides-amplification-model.ipynb  09.5-mongla-tidal-amp-analysis.ipynb  1-cmt-sediment-model.ipynb  10-nodal-tide-analysis.ipynb  10-tide-testing.ipynb  11-make-tides.ipynb  11-tide-curve-adjust.ipynb  (+30 more)
notebooks/archived/: 00-for-Jonathan.ipynb  00-testing.ipynb  01-model-testing.ipynb  02-simplified-sediment-model.ipynb  03-model-parallel.ipynb  03-sediment-model-from-scripts.ipynb  04-sensitivity-analysis.ipynb  05-log-parsing.ipynb  08-mongla-tides-analysis.ipynb  09-ssc.ipynb  09.2-mongla-tides-amplification-model.ipynb  10-tide-curve.ipynb  11-utide-nodal-tide-analysis.ipynb  12-create-tides.ipynb  13-mongla-tide-nodal-estimate.ipynb  13-ssc-tuning.ipynb  14-analyze-results.ipynb  14-sutarkhali-tides-fix.ipynb  15-run-models.ipynb  15-sutarkhali-tidal-amplification.ipynb  16-sutarhali-sediment-model.ipynb  17-sutarkhali-sediment-model.ipynb
notebooks/utide/: utide_real_data_example.ipynb  utide_uv_example.ipynb
scripts/: clean_model_data.py  config.yaml  data_viz.R  incoming_ssc.R  make_tides.R  make_tides_batch.R  model_tides.R  output_bak.csv  run.py  sed_mod-Copy1.ipynb  sed_mod.ipynb  sed_mod.py  sed_mod_parallel.py  winter-sim-2020.ipynb
scripts/results/: metadata.csv
src/: __init__.py  debug_script.py  definitions.py  features.py  incoming_ssc.R  make_tides.R  models.py  models2.py  sed_mod.py  test.py  viz.py
src/features/: __init__.py
src/models/: elevation_model.py
src/tidal_flat/: __init__.py  __main__.py  config.yaml  constants.py  find_eq.py  helpers.py  simulation.py
src/tidal_flat/core/: inundation.py  model.py  platform.py  tides.py
src/tidal_marsh/: __init__.py  evolve.py  find_eq.py  helpers.py  simulation.py  tides.py
src/tidal_marsh/core/: cycle.py  inundation.py  model.py  platform.py  tides.py
src/visualization/: .RData  .Rhistory  data_viz.R
tidal_flat_0d/features/: build_features.py
tidal_flat_0d/models/: Untitled.ipynb  __init__.py  elevation_model.py  incoming_ssc.R  model_tides.R
tidal_marsh/: __init__.py  constants.py  core.py  inundation.py  lunar_phases.csv  model.py  parallel.py  platform.py  simulation.py  simulations.py  tides.py  utils.py
