[tool.poetry]
authors = ["Chris Tasich <chris.tasich@gmail.com>"]
classifiers = [
  "Topic :: Scientific/Engineering :: GIS",
  "Topic :: Scientific/Engineering :: Hydrology",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Visualization",
  "Topic :: Scientific/Engineering",
]
description = "A zero-dimensional morphodynamic model of elevation change on a tidal platform."
keywords = [
  "marsh dynamics",
  "marsh elevation",
  "marsh evolution",
  "marsh modeling",
  "marsh",
  "mud flat",
  "tidal flat",
  "tides",
]
license = "MIT"
name = "tidal_flat"
repository = "https://gitlab.jgilligan.org/chris/tidal_flat"
version = "0.1.0"

[tool.poetry.dependencies]
ipympl = { version = "^0.9.3", optional = true }
ipywidgets = { version = "^8.0.4", optional = true }
jupyterlab = { version = "^3.6.1", optional = true }
matplotlib = "^3.5.3"
numpy = "^1.23.3"
pandas = "^1.5.2"
python = ">=3.8.1,<3.11"
scikit-learn = "^1.1.3"
scipy = "^1.9.1"
seaborn = "^0.12.1"
statsmodels = "^0.13.2"
tqdm = "^4.64.1"

[tool.poetry.extras]
jupyter = ["ipympl", "ipywidgets", "jupyterlab"]

[tool.poetry.group.dev.dependencies]
UTide = "^0.3.0"
black = "^23.1.0"
joblib = "^1.1.0"
line-profiler = "^4.0.1"
loguru = "^0.6.0"
memray = "^1.6.0"
mypy = "^1.0.0"
pandas-stubs = "^1.5.2.230105"
pre-commit = "^3.0.4"
psutil = "^5.9.0"
pyproject-fmt = "^0.9.1"
ruff = "^0.0.247"
ssort = "^0.11.6"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1"]

[tool.mypy]
allow_redefinition = true
cache_dir = "~/.cache/mypy"
check_untyped_defs = true
disallow_any_generics = false
disallow_untyped_defs = true
exclude = [".git", ".mypy_cache", ".ruff_cache", ".tox", ".venv", ".vscode", "venv"]
follow_imports = "silent"
ignore_errors = true
ignore_missing_imports = true
no_implicit_reexport = true
show-column-numbers = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff]
cache-dir = "~/.cache/ruff"
exclude = [".git", ".mypy_cache", ".ruff_cache", ".tox", ".venv", ".vscode", "venv"]
line-length = 120
select = ["B", "C901", "E", "F", "I", "Q", "TID", "W"]
show-source = true
src = ["src"]
target-version = "py310"
update-check = true

[tool.ruff.flake8-quotes]
inline-quotes = "single"

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.pyupgrade]
keep-runtime-typing = true

[tool.pyright]
exclude = [".git", ".mypy_cache", ".ruff_cache", ".tox", ".venv", ".vscode", "venv"]
include = ["src"]
pythonVersion = "3.10"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedVariable = 'warning'
useLibraryCodeForTypes = true

[tool.black]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''
include = '\.pyi?$'
line-length = 120
skip-string-normalization = true
target-version = ['py310']
