[tool.poetry]
authors = ["Chris Tasich <chris.tasich@gmail.com>"]
classifiers = [
  "Topic :: Scientific/Engineering :: GIS",
  "Topic :: Scientific/Engineering :: Hydrology",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Physics",
  "Topic :: Scientific/Engineering :: Visualization",
  "Topic :: Scientific/Engineering",
]
description = "A zero-dimensional morphodynamic model of elevation change on a tidal platform."
keywords = [
  "marsh dynamics",
  "marsh elevation",
  "marsh evolution",
  "marsh modeling",
  "marsh",
  "mud flat",
  "tidal flat",
  "tides",
]
license = "MIT"
name = "tidal_flat"
repository = "https://gitlab.jgilligan.org/chris/tidal_flat"
version = "0.1.0"

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
ipympl = { version = "^0.9.3", optional = true }
ipywidgets = { version = "^8.0.6", optional = true }
jupyterlab = {version = "^4.0.2", optional = true}
matplotlib = "^3.7.1"
scikit-learn = "^1.2.2"
seaborn = "^0.12.2"
tqdm = "^4.65.0"
loguru = "^0.7.0"
scipy = "^1.10.1"
numpy = "^1.25.0"
pandas = "^2.0.2"
statsmodels = {version = "^0.14.0", allow-prereleases = true}

[tool.poetry.group.dev.dependencies]
UTide = "^0.3.0"
black = "^23.3.0"
joblib = "^1.2.0"
line-profiler = "^4.0.3"
mypy = "^1.4.0"
pandas-stubs = "^2.0.2.230605"
pre-commit = "^3.3.3"
psutil = "^5.9.5"
pyproject-fmt = "^0.12.1"
ruff = "^0.0.275"
ssort = "^0.11.6"

[tool.poetry.extras]
jupyter = ["ipympl", "ipywidgets", "jupyterlab"]

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1"]

[tool.mypy]
allow_redefinition = true
cache_dir = "~/.cache/mypy"
check_untyped_defs = true
disallow_any_generics = false
disallow_untyped_defs = true
exclude = [".git", ".mypy_cache", ".ruff_cache", ".tox", ".venv", ".vscode", "venv"]
follow_imports = "silent"
ignore_errors = true
ignore_missing_imports = true
no_implicit_reexport = true
show-column-numbers = true
strict_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[tool.ruff]
cache-dir = "~/.cache/ruff"
exclude = [".git", ".mypy_cache", ".ruff_cache", ".tox", ".venv", ".vscode", "venv"]
line-length = 120
select = ["B", "C901", "E", "F", "I", "Q", "TID", "W", "UP006", "UP007"]
show-source = true
src = ["src"]
target-version = "py311"

[tool.ruff.flake8-quotes]
inline-quotes = "single"

[tool.ruff.per-file-ignores]
"__init__.py" = ["E402"]

[tool.ruff.pydocstyle]
convention = "google"

[tool.ruff.mccabe]
max-complexity = 10

[tool.pyright]
exclude = [".git", ".mypy_cache", ".ruff_cache", ".tox", ".venv", ".vscode", "venv"]
include = ["src"]
pythonVersion = "3.11"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedVariable = 'warning'
useLibraryCodeForTypes = true

[tool.black]
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''
include = '\.pyi?$'
line-length = 120
skip-string-normalization = true
target-version = ['py311']
